# department

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_02_18_1328-bc6bbd6174b1_init_tables.py  2026_02_20_1214-2b3f4c2d0d5e_init_tables.py  2026_02_20_1330-26e82e493b66_init_tables.py
app/: main.py
app/api/: dependencies.py  exception_handlers.py  exceptions.py
app/api/v1/: api.py
app/api/v1/endpoints/: departments.py  employees.py  plans.py
app/config/: paths.py  settings.py
app/database/: session.py
app/models/: department.py  employee.py  plans.py
app/repositories/: base.py  department.py  employee.py  plans.py
app/schemas/: __init__.py  department.py  employee.py  plans.py
app/services/: department.py  employee.py  plans.py
app/utils/: exceptions.py  logger.py
tests/: conftest.py
tests/integration_tests/departments/: test_create_departments.py  test_create_emloyees.py  test_get_departments_by_id.py  test_update_departments.py
